fix: remove dept fallback, batchPinned-first rotation — correct lab faculty
Root cause: buildFacultyList fell through to same-department fallback
(returning ALL IT faculty) when subject.faculty=null (all lab subjects).
This caused the rotation to pick SSK/RAN/etc. at random for DBMSL, CGL etc.

Three changes:
1. buildFacultyList: remove department-wide fallback entirely. Only returns
   subject.faculty (step 1) or subjects_handled match (step 2); otherwise
   empty list. No more random faculty assignment.

2. Rotation pre-check: rewritten per-batch instead of per-subject aggregate.
   Each batch's required faculty (batchPinned → facList → blank) is checked
   for availability. If batchPinned exists but faculty is busy → reject window.

3. Rotation assignment: batchPinned checked first (regardless of facList),
   facList as secondary, blank faculty when neither is set. noFacNeeded
   subjects (Library type or LIB-code) always get blank faculty.

Result: SE-IT CGL→PGK, DBMSL→RAN, DMSML→SSK/ARD, MILL→RSL/SRK,
ECL→ANK/AAK. BE-IT LP5→SRK/AAK, LP6→PGK/RAN. PS2 and Library blank.
191/191 placed (1 Internship room conflict — pre-existing).